kubernetes/apps/media/seerr/ingress.yaml
# Kapitel 21: seerr im Tailnet unter https://seerr.<tailnet>.ts.net
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seerr
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: seerr
      port:
        number: 5055
  tls:
    - hosts:
        - seerr
